2008-12-04  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/mxf/mxfdemux.c:
	(gst_mxf_demux_handle_generic_container_essence_element):
	Ignore zero sized essence elements. They're often inserted
	to fulfill the streaming requirements.

2008-12-04  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/mxf/mxfparse.c:
	(mxf_metadata_generic_picture_essence_descriptor_set_caps):
	Fix setting of the height/width and PAR of video streams.

2008-12-04  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/mxf/Makefile.am:
	* gst/mxf/mxfd10.c: (mxf_is_d10_essence_track),
	(mxf_d10_picture_handle_essence_element),
	(mxf_d10_sound_handle_essence_element), (mxf_d10_create_caps):
	* gst/mxf/mxfd10.h:
	* gst/mxf/mxfdemux.c:
	(gst_mxf_demux_handle_header_metadata_update_streams):
	Add support for SMPTE D10 essence (SMPTE 386M).

	* gst/mxf/mxfparse.c:
	(mxf_metadata_generic_picture_essence_descriptor_set_caps):
	Don't set width/height and PAR on the caps as those values are
	wrong for most files (height is sometimes the height of a field
	and aspect ratio is some random value).

	* gst/mxf/mxfaes-bwf.c: (mxf_bwf_create_caps),
	(mxf_aes3_create_caps):
	Fix calculation of block align if it isn't set in the descriptor.

2008-12-03  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/mxf/mxfaes-bwf.c:
	(mxf_metadata_aes3_audio_essence_descriptor_handle_tag),
	(mxf_metadata_aes3_audio_essence_descriptor_reset),
	(mxf_aes3_handle_essence_element), (mxf_bwf_create_caps),
	(mxf_aes3_create_caps), (mxf_aes_bwf_create_caps):
	* gst/mxf/mxfaes-bwf.h:
	* gst/mxf/mxfdemux.c: (gst_mxf_demux_reset_metadata),
	(gst_mxf_demux_handle_metadata_aes3_audio_essence_descriptor),
	(gst_mxf_demux_handle_header_metadata_resolve_references),
	(gst_mxf_demux_handle_metadata):
	* gst/mxf/mxfdemux.h:
	Add support for AES3 audio (SMPTE 382M).

	* gst/mxf/mxfdv-dif.c: (mxf_dv_dif_create_caps):
	* gst/mxf/mxfjpeg2000.c: (mxf_jpeg2000_create_caps):
	Fix coding style.
